--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 
 /* Teddy */
 .teddy {
-  font-size: 120px;
+  width: 200px;
   animation: bounce 2s infinite;
 }
 
@@ -95,8 +95,15 @@ h1, h2, p {
 
 <!-- PAGE 1 -->
 <div class="page active" id="page1">
-  <div class="teddy">🧸❤️</div>
+  <img src="happy-teddy-bear-holding-a-love-heart--e2-80-93-cute-illustation-11501025.png!bw700">
   <h1>Baby Tee 💕</h1>
+  <img src="babytee.jpg" style="
+  width:160px;
+  border-radius:50%;
+  margin:15px 0;
+  box-shadow:0 0 20px pink;
+">
+
   <h2>hey baby tee will you be my Valentine?</h2>
 
   <button id="yesBtn">YES 💖</button>
@@ -105,6 +112,13 @@ h1, h2, p {
 
 <!-- PAGE 2 -->
 <div class="page" id="page2">
+  <img src="us.jpg" style="
+  width:250px;
+  border-radius:20px;
+  margin-bottom:20px;
+  box-shadow:0 0 25px #ff4d6d;
+">
+
   <h2>
     From the moment we met it was no coincidence,<br><br>
     I have loved u ever since and I will always love u baby ❤️😘
@@ -200,3 +214,4 @@ function heartsRain() {
 
 </body>
 </html>
+
