--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ h1, h2, p {
   <button id="yesBtn">YES 💖</button>
   <button id="noBtn">NO 💔</button>
 </div>
+  <audio controls autoplay loop>
+    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591-mp3" type="audio/mpeg" >
+    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591-wav" type="audio/wav" >
+  </audio>
 
 <!-- PAGE 2 -->
 <div class="page" id="page2">
@@ -214,4 +218,5 @@ function heartsRain() {
 
 </body>
 </html>
+
 
