Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1, h2, p {
 
 <!-- PAGE 1 -->
 <div class="page active" id="page1">
-  <img src="happy-teddy-bear-holding-a-love-heart--e2-80-93-cute-illustation-11501025.png!bw700">
+  <img src=". /images/teddy. png">
   <h1>Baby Tee 💕</h1>
   <img src="babytee.jpg" style="
   width:160px;
@@ -110,13 +110,15 @@ h1, h2, p {
   <button id="noBtn">NO 💔</button>
 </div>
   <audio controls autoplay loop>
-    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591-mp3" type="audio/mpeg" >
-    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591-wav" type="audio/wav" >
+    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591" type="audio/mpeg">
+    <source src="lil_maina_nikita_kering_desire_official_audio_mp3_41591_wav" type="audio/wav" >
   </audio>
 
 <!-- PAGE 2 -->
 <div class="page" id="page2">
   <img src="us.jpg" style="
+  <img src="ml.jpg" style="
+  <img src="chibaby.jpg" style="
   width:250px;
   border-radius:20px;
   margin-bottom:20px;
@@ -125,13 +127,14 @@ h1, h2, p {
 
   <h2>
     From the moment we met it was no coincidence,<br><br>
-    I have loved u ever since and I will always love u baby ❤️😘
+    I have l❤️ved u ever since and I will always l❤️ve u baby ❤️😘
+    U r the best thing that has happened in my life😊💍💎
   </h2>
 </div>
 
 <!-- PAGE 3 -->
 <div class="page" id="page3">
-  <h1 style="font-size:60px;">I LOVE U SO VERY MUCH 😘❤️</h1>
+  <h1 style="font-size:60px;">I L❤️VE U SO VERY MUCH BABY😘❤️</h1>
 </div>
 
 <canvas id="fx"></canvas>
@@ -218,5 +221,6 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
