Fix HTML formatting and improve structure

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1, h2, p {
 
 <!-- PAGE 1 -->
 <div class="page active" id="page1">
-  <img src="teddy. png">
+  <img src="./teddy.png" class="teddy" alt="Teddy holding love">
   <h1>Baby Tee 💕</h1>
   <img src="babytee.jpg" style="
   width:160px;
@@ -221,6 +221,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
