Refactor HTML structure and styles for clarity

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <title>For Baby Tee 💖</title>
 
 <style>
+  .love-photo {
+  width: 170px;
+  background: white;
+  padding: 10px;
+  border-radius: 12px;
+  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+  transform: rotate(-2deg);
+}
+
 * {
   box-sizing: border-box;
   font-family: 'Comic Sans MS', cursive;
@@ -221,6 +230,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
