--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@ body {
 
 /* Pages */
 .page {
-  display: none;
-  height: 100vh;
-  padding: 30px;
-  justify-content: center;
-  align-items: center;
+  min-height: 100vh;
+  padding: 20px 15px;
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  overflow-y: auto;
 }
 
 .page.active {
@@ -230,6 +231,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
