Refactor index.html for layout and style improvements
Updated styles and structure for improved layout and functionality.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ body {
 
 /* Teddy */
 .teddy {
-  width: 200px;
+  width: 140px;
+  max-width: 60%;
+  margin: 10px 0;
   animation: bounce 2s infinite;
 }
 
@@ -231,6 +233,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
