--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 
 <style>
   .love-photo {
-  width: 170px;
-  background: white;
-  padding: 10px;
-  border-radius: 12px;
-  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-  transform: rotate(-2deg);
+  width: 150px;
+  margin: 15px 0;
+  border-radius: 18px;
+  box-shadow: 0 8px 20px rgba(255,0,90,0.4);
+}
+
+.love-text {
+  font-size: 18px;
+  line-height: 1.5;
+  max-width: 90%;
+  margin-top: 10px;
 }
 
 * {
@@ -233,6 +238,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
