Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@ body {
   overflow: hidden;
   text-align: center;
 }
+h1 {
+  font-size: 28px;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+p {
+  margin: 10px 0;
+}
 
 /* Pages */
 .page {
@@ -238,6 +251,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
