--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ h1, h2, p {
 <body>
 
 <!-- PAGE 1 -->
+<div class="slider" >
 <div class="page active" id="page1">
   <img src="./teddy.png" class="teddy" alt="Teddy holding love">
   <h1>Baby Tee 💕</h1>
@@ -145,6 +146,7 @@ h1, h2, p {
   </audio>
 
 <!-- PAGE 2 -->
+<div class="slider" >
 <div class="page" id="page2">
   <img src="us.jpg" style="
   <img src="ml.jpg" style="
@@ -251,6 +253,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
