Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@ h2 {
 p {
   margin: 10px 0;
 }
+  body {
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  width: 300vw;
+  height: 100vh;
+  transition: transform 1s ease-in-out;
+}
 
 /* Pages */
 .page {
@@ -262,6 +272,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
