--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
   
 /* Pages */
@@ -296,6 +302,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
