Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ p {
   overflow: hidden;
 }
   
+  .page {
+  width: 100vw;
+  height: 100vh;
+  flex-shrink: 0;
+  overflow: hidden;
+  position: relative;
+}
+  
 /* Pages */
 .page {
   .slider {
@@ -302,6 +310,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
