--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ p {
   position: relative;
 }
   
+  .page img {
+  max-width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
+}
+  
 /* Pages */
 .page {
   .slider {
@@ -310,6 +316,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
