Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@ p {
   height: 100%;
   overflow: hidden;
 }
+
+  .photo-small {
+  width: 180px;
+  height: 180px;
+  border-radius: 20px;
+  object-fit: cover;
+  margin-bottom: 20px;
+  box-shadow: 0 10px 25px rgba(255,0,100,0.3);
+}
   
   .page {
   width: 100vw;
@@ -316,6 +325,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
