Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@ h1, h2, p {
 <!-- PAGE 2 -->
 <div class="slider" >
   <div class="page" id="page2">
-  <img src="us.jpg" style="
+  <img src="us.jpg" class="photo small>"
   <img src="ml.jpg" style="
   <img src="chibaby.jpg" style="
-  width:250px;
+  width:100px;
   border-radius:20px;
   margin-bottom:20px;
   box-shadow:0 0 25px #ff4d6d;
@@ -325,6 +325,7 @@ function heartsRain() {
 
 </body>
 </html>
+
 
 
 
